@@ -7,5 +7,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="next_call" widget="time" string="Next Call Time" optional="1"/>
     <field name="interval_number"/>
     <field name="interval_type"/>
+    <field name="running"/>
     <button name="run_once" string="Run Once" tree_invisible="1"/>
 </tree>
